# propsai

./: .gitignore  MVP_THESIS_RULES.md  README.md  check_kalshi.py  launch_agent.sh  netlify.toml  patch_apply_dynamic_weights.py  patch_dynamic_weights.py  patch_evaluate_weather.py  patch_orderbook.py
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  backtest_kalshi.py  backtest_line_model.py  backtest_real_lines.py  backtest_weather.py  calibrate_bias.py  calibrated_biases.json  check_epl_markets.py  debug_matching.py  deploy.sh  discover_all_sports.py  docker-compose.yml  fetch_historical_odds.py  fetch_kalshi_history.py  find_sports_series.py  list_odds_sports.py  nixpacks.toml  pyproject.toml  railway.toml  run_calibration.py  run_paper_trade.py  scan_series.py  scan_single_events.py  scan_sports_markets.py  test_kalshi.py  test_kalshi_api.py  test_kalshi_market.py  test_orderbook.py  test_raw_kalshi.py  train_line_model.py  walkforward_backtest.py
backend/app/: config.py  logging_config.py  main.py
backend/scripts/: analyze_kalshi_activity.py  check_kalshi_auth.py  export_kalshi_account_history.py  live_readiness_check.py  live_trading_runbook.md  migrate_line_edge.sql  migrate_paper_trades.sql  migrate_v7.sql  schema.sql  seed_historical.py
backend/tests/: test_agent_controls.py  test_health.py  test_health_runtime.py  test_kelly.py  test_live_readiness.py  test_main_startup.py  test_market_direction_parsing.py  test_sports_matching.py  test_trading_engine_risk.py  test_travel.py  test_weather_resilience.py  test_weather_volume.py
(+127 files in other folders)
