[tool.poetry]
name = "propsai-backend"
version = "0.1.0"
description = "PropsAI - NBA player props prediction engine"
authors = ["PropsAI"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
supabase = "^2.3.0"
httpx = "^0.26.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
scipy = "^1.11.0"
openai = "^1.10.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
feedparser = "^6.0.0"
tweepy = "^4.14.0"
joblib = "^1.3.0"
apscheduler = "^3.10.0"
eval-type-backport = "^0.3.1"
newsapi-python = "^0.2.7"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806", "E501", "E402", "N803", "E701", "E702", "UP038"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
